Re-introduce the compass view for a smoother compass experience

--- a/app/src/main/res/layout-land/compass_fragment.xml
+++ b/app/src/main/res/layout-land/compass_fragment.xml
@@ -14,7 +14,7 @@
         android:paddingEnd="32dp"
         android:paddingBottom="32dp">
 
-        <ImageView
+        <io.trewartha.positional.ui.compass.CompassView
             android:id="@+id/compassBackgroundImageView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -22,7 +22,6 @@
             app:layout_constraintBottom_toTopOf="@id/accelerometerAccuracyTextView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_weight="1"
-            app:tint="?attr/colorOnSurface"
             tools:ignore="ContentDescription" />
 
         <ImageView
