--- a/app/src/main/res/layout/divider.xml
+++ b/app/src/main/res/layout/divider.xml
@@ -2,4 +2,5 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="1dp"
-    android:background="@color/surfaceVariant" />
+    android:alpha="0.2"
+    android:background="?attr/colorOnSurface" />
