--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,34 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="_black">#000000</color>
+    <color name="black">#000000</color>
 
-    <color name="_blue100">#bbdefb</color>
-    <color name="_blue300">#64b5f6</color>
-    <color name="_blue700">#1976d2</color>
-    <color name="_blue900">#0d47a1</color>
+    <color name="blue100">#bbdefb</color>
+    <color name="blue300">#64b5f6</color>
+    <color name="blue700">#1976d2</color>
+    <color name="blue900">#0d47a1</color>
 
-    <color name="_gray1">#f9f9f9</color>
-    <color name="_gray2">#f0f0f0</color>
-    <color name="_gray3">#282828</color>
+    <color name="gray1">#f9f9f9</color>
+    <color name="gray2">#f0f0f0</color>
+    <color name="gray3">#282828</color>
+    <color name="gray4">#121212</color>
 
-    <color name="_deepPurple100">#d1c4e9</color>
-    <color name="_deepPurple300">#9575cd</color>
-    <color name="_deepPurple700">#512da8</color>
-    <color name="_deepPurple900">#311b92</color>
+    <color name="deepPurple100">#d1c4e9</color>
+    <color name="deepPurple300">#9575cd</color>
+    <color name="deepPurple700">#512da8</color>
+    <color name="deepPurple900">#311b92</color>
 
-    <color name="_red">#f44336</color>
-    <color name="_white">#ffffff</color>
-
-    <color name="background">@color/_gray1</color>
-    <color name="error">@color/_red</color>
-    <color name="onSurface">@color/_black</color>
-    <color name="primary">@color/_blue700</color>
-    <color name="primaryVariant">@color/_blue900</color>
-    <color name="secondary">@color/_deepPurple700</color>
-    <color name="secondaryVariant">@color/_deepPurple900</color>
-    <color name="shimmer">@color/_gray2</color>
-    <color name="surface">@color/_white</color>
-    <color name="surfaceVariant">@color/_gray2</color>
+    <color name="red">#f44336</color>
+    <color name="white">#ffffff</color>
 
 </resources>
