--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Positional" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:statusBarColor">@color/background</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
-        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
+    <style name="Positional.System" parent="Positional.Light" />
 
-        <!-- Material Theme Colors -->
-        <item name="android:colorBackground">@color/surface</item>
-        <item name="android:navigationBarColor">@color/surface</item>
-        <item name="colorError">@color/error</item>
-        <item name="colorOnSurface">@color/onSurface</item>
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorSecondary">@color/secondary</item>
-        <item name="colorSurface">@color/surface</item>
-
+    <style name="Positional.Light" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:windowBackground">@color/white</item>
         <item name="bottomNavigationStyle">@style/Widget.Positional.BottomNavigationView</item>
+        <item name="colorError">@color/red</item>
+        <item name="colorOnSurface">@color/black</item>
+        <item name="colorPrimary">@color/blue700</item>
+        <item name="colorPrimaryVariant">@color/blue900</item>
+        <item name="colorSecondary">@color/deepPurple700</item>
+        <item name="colorSecondaryVariant">@color/deepPurple900</item>
+        <item name="colorSurface">@color/white</item>
         <item name="materialButtonStyle">@style/Widget.Positional.Button</item>
-
         <item name="textAppearanceHeadline1">@style/TextAppearance.Positional.Headline1</item>
         <item name="textAppearanceHeadline2">@style/TextAppearance.Positional.Headline2</item>
         <item name="textAppearanceHeadline3">@style/TextAppearance.Positional.Headline3</item>
@@ -33,18 +31,32 @@
         <item name="textAppearanceOverline">@style/TextAppearance.Positional.Overline</item>
     </style>
 
-    <style name="Positional.System" />
-
-    <style name="Positional.Light" parent="Theme.MaterialComponents.Light.NoActionBar">
-
-    </style>
-
     <style name="Positional.Dark" parent="Theme.MaterialComponents.NoActionBar">
-
-    </style>
-
-    <style name="Positional.Black" parent="Theme.MaterialComponents.NoActionBar">
-
+        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:statusBarColor">@color/gray4</item>
+        <item name="android:windowBackground">@color/gray4</item>
+        <item name="bottomNavigationStyle">@style/Widget.Positional.BottomNavigationView</item>
+        <item name="colorError">@color/red</item>
+        <item name="colorOnSurface">@color/gray2</item>
+        <item name="colorPrimary">@color/blue100</item>
+        <item name="colorPrimaryVariant">@color/blue300</item>
+        <item name="colorSecondary">@color/deepPurple100</item>
+        <item name="colorSecondaryVariant">@color/deepPurple300</item>
+        <item name="colorSurface">@color/gray4</item>
+        <item name="materialButtonStyle">@style/Widget.Positional.Button</item>
+        <item name="textAppearanceHeadline1">@style/TextAppearance.Positional.Headline1</item>
+        <item name="textAppearanceHeadline2">@style/TextAppearance.Positional.Headline2</item>
+        <item name="textAppearanceHeadline3">@style/TextAppearance.Positional.Headline3</item>
+        <item name="textAppearanceHeadline4">@style/TextAppearance.Positional.Headline4</item>
+        <item name="textAppearanceHeadline5">@style/TextAppearance.Positional.Headline5</item>
+        <item name="textAppearanceHeadline6">@style/TextAppearance.Positional.Headline6</item>
+        <item name="textAppearanceSubtitle1">@style/TextAppearance.Positional.Subtitle1</item>
+        <item name="textAppearanceSubtitle2">@style/TextAppearance.Positional.Subtitle2</item>
+        <item name="textAppearanceBody1">@style/TextAppearance.Positional.Body1</item>
+        <item name="textAppearanceBody2">@style/TextAppearance.Positional.Body2</item>
+        <item name="textAppearanceCaption">@style/TextAppearance.Positional.Caption</item>
+        <item name="textAppearanceButton">@style/TextAppearance.Positional.Button</item>
+        <item name="textAppearanceOverline">@style/TextAppearance.Positional.Overline</item>
     </style>
 
     <!-- Overrides for Text Appearances -->
@@ -108,7 +120,7 @@
 
     <style name="LocationCoordinates" parent="TextAppearance.Positional.Headline3">
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/onSurface</item>
+        <item name="android:textColor">?attr/colorOnSurface</item>
         <item name="autoSizeMinTextSize">14sp</item>
         <item name="autoSizeTextType">uniform</item>
     </style>
@@ -121,8 +133,7 @@
     </style>
 
     <style name="LocationStatIcon">
-        <item name="android:tintMode">src_in</item>
-        <item name="android:tint">@color/onSurface</item>
+        <item name="tint">?attr/colorOnSurface</item>
     </style>
 
     <style name="LocationStatLabel" parent="@style/TextAppearance.Positional.Body1">
@@ -135,7 +146,7 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="LocationStatAccuracy" parent="TextAppearance.Positional.Caption"/>
+    <style name="LocationStatAccuracy" parent="TextAppearance.Positional.Caption" />
 
     <style name="LocationStatRow">
         <item name="android:gravity">center_vertical</item>
@@ -149,7 +160,7 @@
         <item name="android:layout_weight">1</item>
     </style>
 
-    <style name="LocationUpdatedAt" parent="TextAppearance.Positional.Caption"/>
+    <style name="LocationUpdatedAt" parent="TextAppearance.Positional.Caption" />
 
     <!-- Sun -->
 
@@ -159,20 +170,12 @@
     </style>
 
     <style name="SunDate" parent="TextAppearance.Positional.Caption">
-        <item name="corners">4</item>
-        <item name="custom_color">@color/shimmer</item>
         <item name="android:gravity">end</item>
-        <item name="height_weight">0.8</item>
-        <item name="android:minWidth">72dp</item>
     </style>
 
     <style name="SunStat" parent="TextAppearance.Positional.Headline6">
         <item name="android:textIsSelectable">true</item>
         <item name="android:gravity">end</item>
-        <item name="corners">4</item>
-        <item name="custom_color">@color/shimmer</item>
-        <item name="height_weight">0.8</item>
-        <item name="android:minWidth">96dp</item>
     </style>
 
 </resources>
