Optimize location layout for small screens

--- a/app/src/main/res/layout-land/location_fragment.xml
+++ b/app/src/main/res/layout-land/location_fragment.xml
@@ -50,7 +50,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/shareButton"
             style="@style/Widget.Positional.Button.TextButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:contentDescription="@string/location_share_button_content_description"
             android:tooltipText="@string/location_share_button_tooltip"
@@ -61,7 +61,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/copyButton"
             style="@style/Widget.Positional.Button.TextButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:contentDescription="@string/location_copy_coordinates_content_description"
             android:tooltipText="@string/location_copy_coordinates_tooltip"
@@ -72,7 +72,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/screenLockButton"
             style="@style/Widget.Positional.Button.TextButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:contentDescription="@string/location_screen_lock_button_content_description_off"
             android:tooltipText="@string/location_screen_lock_button_tooltip_off"
@@ -83,7 +83,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/helpButton"
             style="@style/Widget.Positional.Button.TextButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:contentDescription="@string/location_help_button_content_description"
             android:tooltipText="@string/location_help_button_tooltip"
