--- a/app/src/main/res/layout/location_fragment.xml
+++ b/app/src/main/res/layout/location_fragment.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,270 +10,10 @@
         android:layout_height="match_parent"
         android:padding="16dp">
 
-        <TextView
-            android:id="@+id/coordinatesTextView"
-            style="@style/LocationCoordinates"
+        <androidx.compose.ui.platform.ComposeView
+            android:id="@+id/statsView"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginBottom="@dimen/location_stat_row_gap_vertical"
-            app:layout_constraintBottom_toTopOf="@id/buttonFlow"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="12.34567\n23.45678" />
-
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:id="@+id/progressIndicator"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:indeterminate="true"
-            app:layout_constraintBottom_toBottomOf="@id/coordinatesTextView"
-            app:layout_constraintEnd_toEndOf="@id/coordinatesTextView"
-            app:layout_constraintStart_toStartOf="@id/coordinatesTextView"
-            app:layout_constraintTop_toTopOf="@id/coordinatesTextView" />
-
-        <androidx.constraintlayout.helper.widget.Flow
-            android:id="@+id/buttonFlow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/location_stat_row_gap_vertical"
-            app:constraint_referenced_ids="shareButton,copyButton,screenLockButton,helpButton"
-            app:layout_constraintBottom_toTopOf="@id/statsFlow"
-            app:layout_constraintTop_toBottomOf="@id/coordinatesTextView" />
-
-        <androidx.constraintlayout.helper.widget.Flow
-            android:id="@+id/statsFlow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:constraint_referenced_ids="divider0,coordinatesAccuracyFlow,divider1,bearingFlow,divider2,elevationFlow,divider3,speedFlow,updatedAtTextView"
-            app:flow_verticalGap="@dimen/location_stat_row_gap_horizontal"
-            app:flow_verticalStyle="spread_inside"
-            app:flow_wrapMode="none"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/buttonFlow" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/shareButton"
-            style="@style/Widget.Positional.Button.TextButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/location_share_button_content_description"
-            android:tooltipText="@string/location_share_button_tooltip"
-            app:icon="@drawable/ic_twotone_share_24px"
-            app:iconGravity="textStart"
-            tools:targetApi="o" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/copyButton"
-            style="@style/Widget.Positional.Button.TextButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/location_copy_coordinates_content_description"
-            android:tooltipText="@string/location_copy_coordinates_tooltip"
-            app:icon="@drawable/ic_twotone_file_copy_24px"
-            app:iconGravity="textStart"
-            tools:targetApi="o" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/screenLockButton"
-            style="@style/Widget.Positional.Button.TextButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/location_screen_lock_button_content_description_off"
-            android:tooltipText="@string/location_screen_lock_button_tooltip_off"
-            app:icon="@drawable/ic_twotone_screen_lock_portrait_24px"
-            app:iconGravity="textStart"
-            tools:targetApi="o" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/helpButton"
-            style="@style/Widget.Positional.Button.TextButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/location_help_button_content_description"
-            android:tooltipText="@string/location_help_button_tooltip"
-            app:icon="@drawable/ic_twotone_help_24"
-            app:iconGravity="textStart"
-            tools:targetApi="o" />
-
-        <include
-            android:id="@+id/divider0"
-            layout="@layout/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp" />
-
-        <androidx.constraintlayout.helper.widget.Flow
-            android:id="@+id/coordinatesAccuracyFlow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:constraint_referenced_ids="coordinatesAccuracyImageView,coordinatesAccuracyLabelTextView,coordinatesAccuracyValueTextView,coordinatesAccuracyPlaceholderTextView"
-            app:flow_horizontalGap="@dimen/location_stat_row_gap_horizontal" />
-
-        <ImageView
-            android:id="@+id/coordinatesAccuracyImageView"
-            android:layout_width="@dimen/location_stat_row_image_size"
-            android:layout_height="@dimen/location_stat_row_image_size"
-            android:contentDescription="@string/location_label_accuracy"
-            android:src="@drawable/ic_adjust_24px" />
-
-        <TextView
-            android:id="@+id/coordinatesAccuracyLabelTextView"
-            style="@style/LocationStatLabel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/location_label_accuracy" />
-
-        <TextView
-            android:id="@+id/coordinatesAccuracyValueTextView"
-            style="@style/LocationStat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:minWidth="96dp" />
-
-        <TextView
-            android:id="@+id/coordinatesAccuracyPlaceholderTextView"
-            style="@style/LocationStatAccuracy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:minWidth="36dp" />
-
-        <include
-            android:id="@+id/divider1"
-            layout="@layout/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp" />
-
-        <androidx.constraintlayout.helper.widget.Flow
-            android:id="@+id/bearingFlow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:constraint_referenced_ids="bearingImageView,bearingLabelTextView,bearingValueTextView,bearingAccuracyValueTextView"
-            app:flow_horizontalGap="@dimen/location_stat_row_gap_horizontal" />
-
-        <ImageView
-            android:id="@+id/bearingImageView"
-            android:layout_width="@dimen/location_stat_row_image_size"
-            android:layout_height="@dimen/location_stat_row_image_size"
-            android:contentDescription="@string/location_label_bearing"
-            android:src="@drawable/ic_twotone_explore_24px" />
-
-        <TextView
-            android:id="@+id/bearingLabelTextView"
-            style="@style/LocationStatLabel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/location_label_bearing" />
-
-        <TextView
-            android:id="@+id/bearingValueTextView"
-            style="@style/LocationStat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:minWidth="96dp" />
-
-        <TextView
-            android:id="@+id/bearingAccuracyValueTextView"
-            style="@style/LocationStatAccuracy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:minWidth="36dp" />
-
-        <include
-            android:id="@+id/divider2"
-            layout="@layout/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp" />
-
-        <androidx.constraintlayout.helper.widget.Flow
-            android:id="@+id/elevationFlow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:constraint_referenced_ids="elevationImageView,elevationLabelTextView,elevationValueTextView,elevationAccuracyValueTextView"
-            app:flow_horizontalGap="@dimen/location_stat_row_gap_horizontal" />
-
-        <ImageView
-            android:id="@+id/elevationImageView"
-            android:layout_width="@dimen/location_stat_row_image_size"
-            android:layout_height="@dimen/location_stat_row_image_size"
-            android:contentDescription="@string/location_label_elevation"
-            android:src="@drawable/ic_twotone_terrain_24px" />
-
-        <TextView
-            android:id="@+id/elevationLabelTextView"
-            style="@style/LocationStatLabel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/location_label_elevation" />
-
-        <TextView
-            android:id="@+id/elevationValueTextView"
-            style="@style/LocationStat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:minWidth="96dp" />
-
-        <TextView
-            android:id="@+id/elevationAccuracyValueTextView"
-            style="@style/LocationStatAccuracy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:minWidth="36dp" />
-
-        <include
-            android:id="@+id/divider3"
-            layout="@layout/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp" />
-
-        <androidx.constraintlayout.helper.widget.Flow
-            android:id="@+id/speedFlow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:constraint_referenced_ids="speedImageView,speedLabelTextView,speedValueTextView,speedAccuracyValueTextView"
-            app:flow_horizontalGap="@dimen/location_stat_row_gap_horizontal" />
-
-        <ImageView
-            android:id="@+id/speedImageView"
-            android:layout_width="@dimen/location_stat_row_image_size"
-            android:layout_height="@dimen/location_stat_row_image_size"
-            android:contentDescription="@string/location_label_speed"
-            android:src="@drawable/ic_speedometer_24px" />
-
-        <TextView
-            android:id="@+id/speedLabelTextView"
-            style="@style/LocationStatLabel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/location_label_speed" />
-
-        <TextView
-            android:id="@+id/speedValueTextView"
-            style="@style/LocationStat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:minWidth="96dp" />
-
-        <TextView
-            android:id="@+id/speedAccuracyValueTextView"
-            style="@style/LocationStatAccuracy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:minWidth="36dp" />
-
-        <TextView
-            android:id="@+id/updatedAtTextView"
-            style="@style/LocationUpdatedAt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/location_updating" />
+            android:layout_height="match_parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
