--- a/app/src/main/res/drawable/ic_twotone_explore_24px.xml
+++ b/app/src/main/res/drawable/ic_twotone_explore_24px.xml
@@ -6,13 +6,13 @@
     android:viewportHeight="24">
     <path
         android:fillAlpha="0.3"
-        android:fillColor="?attr/colorOnSurface"
+        android:fillColor="@color/black"
         android:pathData="M12,4c-4.41,0 -8,3.59 -8,8s3.59,8 8,8c4.41,0 8,-3.59 8,-8S16.41,4 12,4zM14.01,14.01L6.5,17.5l3.49,-7.51L17.5,6.5L14.01,14.01z"
         android:strokeAlpha="0.3" />
     <path
-        android:fillColor="?attr/colorOnSurface"
+        android:fillColor="@color/black"
         android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10c5.52,0 10,-4.48 10,-10S17.52,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8s3.59,-8 8,-8c4.41,0 8,3.59 8,8S16.41,20 12,20z" />
     <path
-        android:fillColor="?attr/colorOnSurface"
+        android:fillColor="@color/black"
         android:pathData="M6.5,17.5l7.51,-3.49L17.5,6.5L9.99,9.99L6.5,17.5zM12,10.9c0.61,0 1.1,0.49 1.1,1.1s-0.49,1.1 -1.1,1.1s-1.1,-0.49 -1.1,-1.1S11.39,10.9 12,10.9z" />
 </vector>
