--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,19 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:tint="?attr/colorControlNormal"
-    android:viewportWidth="42.105263"
-    android:viewportHeight="42.105263">
-    <group
-        android:translateX="9.052631"
-        android:translateY="9.052631">
-        <path
-            android:fillAlpha="0.3"
-            android:fillColor="#FF000000"
-            android:pathData="M5,15l3.04,0l-1.52,-2.03z"
-            android:strokeAlpha="0.3" />
-        <path
-            android:fillColor="#FF000000"
-            android:pathData="M9.78,10.63l1.25,1.67L14,8.33L19,15h-8.46l-4.01,-5.37L1,17h22L14,5L9.78,10.63zM5,15l1.52,-2.03L8.04,15H5z" />
-    </group>
+    android:viewportWidth="24"
+    android:viewportHeight="24"
+    android:tint="#000000">
+  <group android:scaleX="0.58"
+      android:scaleY="0.58"
+      android:translateX="5.04"
+      android:translateY="5.04">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M13.2,7.07L10.25,11l2.25,3c0.33,0.44 0.24,1.07 -0.2,1.4 -0.44,0.33 -1.07,0.25 -1.4,-0.2 -1.05,-1.4 -2.31,-3.07 -3.1,-4.14 -0.4,-0.53 -1.2,-0.53 -1.6,0l-4,5.33c-0.49,0.67 -0.02,1.61 0.8,1.61h18c0.82,0 1.29,-0.94 0.8,-1.6l-7,-9.33c-0.4,-0.54 -1.2,-0.54 -1.6,0z"/>
+  </group>
 </vector>
