Clean up some Compose and insets weirdness

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,5 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="standard_padding">16dp</dimen>
 
     <dimen name="bottom_sheet_list_item_height">48dp</dimen>
     <dimen name="bottom_sheet_title_height">56dp</dimen>
